# verotusarvot

./: .gitignore  .python-version  01_download_data.py  02_process_data.py  README.md  dump.csv.bz2  ideas.md  openssl_min_tls12.conf  pyproject.toml  requirements.txt  verotusarvot.csv.bz2  verotusarvot.parquet
.github/: dependabot.yaml
.github/workflows/: site.yml
