[project]
name = "verotusarvot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx[http2,zstd]>=0.28.1",
    "lxml>=6.0.2",
    "more-itertools>=10.8.0",
    "polars>=1.34.0",
    "pyexcel>=0.7.3",
    "pyexcel-xls>=0.7.1",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "types-beautifulsoup4>=4.12.0.20250516",
]
